# dasp-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/core/: io.rs  mod.rs  ops.rs
src/features/: harmonics.rs  inverse.rs  manipulation.rs  mod.rs  phase_recovery.rs  rhythm.rs  spectral.rs
src/magnitude/: mod.rs  scaling.rs
src/pitch/: tuning.rs
src/pitch_core/: mod.rs  tuning.rs
src/signal_generation/: generators.rs
src/signal_processing/: amplitude.rs  mixing.rs  mod.rs  mono.rs  panning.rs  resampling.rs  time_domain.rs  time_frequency.rs
src/utils/: frequency.rs  mod.rs  notation.rs  time.rs
tests/: correctness.rs
