[package]
name = "dasp-rs"
version = "0.2.0"
edition = "2024"
description = "A crate for digital signal processing, speech processing, music analysis, and phonetics."
authors = ["Amirhossein Ghanipour amirhosseinghanipour@gmail.com"]
license = "MIT"
keywords = [
  "audio",
  "dsp",
  "audio-processing",
  "speech-processing",
  "music-analysis",
]
repository = "https://github.com/amirhosseinghanipour/dasp-rs"
documentation = "https://docs.rs/dasp-rs/0.2.0"
categories = ["multimedia::audio", "algorithms"]
readme = "README.md"

[dependencies]
hound = "3.5.1"
rustfft = "6.2.0"
num-complex = "0.4.6"
thiserror = "1.0"
rubato = "0.16.1"
ndarray = { version = "0.16", features = ["rayon"] }
approx = "0.5.1"
rayon = "1.10.0"
nalgebra = "0.33"
log = "0.4.27"

[dev-dependencies]
tempfile = "3.20.0"
