[package]
name = "dasp-rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Pure-Rust digital audio signal processing: I/O, STFT/CQT, spectral & MIR features, pitch, and music/phonetics notation."
authors = ["Amirhossein Ghanipour d3v1ll3n@gmail.com"]
license = "MIT"
keywords = [
  "audio",
  "dsp",
  "audio-processing",
  "speech-processing",
  "music-analysis",
]
repository = "https://github.com/amirhosseinghanipour/dasp-rs"
documentation = "https://docs.rs/dasp-rs"
categories = ["multimedia::audio", "algorithms"]
readme = "README.md"

[dependencies]
hound = "3.5.1"
rustfft = "6.2.0"
num-complex = "0.4.6"
thiserror = "1.0"
rubato = "0.16.1"
ndarray = { version = "0.16", features = ["rayon"] }
approx = "0.5.1"
rayon = "1.10.0"
nalgebra = "0.33"
log = "0.4.27"

[dev-dependencies]
tempfile = "3.20.0"
